# kafka_deltalake_minio

./: .env  Dockerfile  README.md  activate.sh  create-buckets.sh  docker-compose-infra.yaml  docker-compose.yaml  pyproject.toml
config/: docker.env
src/kafka_deltalake_minio/: consumer.py  producer.py  read.py  settings.py
src/kafka_deltalake_minio/core/: customer_data.py  data_pusher.py  kafka_to_delta_consumer.py  mongo_syncer.py  utils.py
src/kafka_deltalake_minio/io/: base_kafka_consumer.py  base_kafka_producer.py  client_mongo.py  delta_table_reader.py  logger.py
src/kafka_deltalake_minio/jobs/consumers/: delta_consumer.py
src/kafka_deltalake_minio/jobs/database/: rollback.py  sync_mongo.py
src/kafka_deltalake_minio/jobs/delta/: read.py  read_changes.py
src/kafka_deltalake_minio/jobs/producers/: push_population.py  push_updates.py
